--- a/templates/post.mustache
+++ b/templates/post.mustache
@@ -1,11 +1,44 @@
-<div>
-    <div>
-        <div class="bg-cover rounded-circle bg-dark" style="width: 2rem; height: 2rem; style='background-image: url({{{img}}})'"></div>
-        <div class="badge badge-dark">{{{ role }}}</div>
-        <small>{{{username}}}</small>
-    </div>
+{{!
+    This file is part of Moodle - http://moodle.org/
+    Moodle is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+    Moodle is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+    You should have received a copy of the GNU General Public License
+    along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+}}
+{{!
+    @template blocks_forumfeed/post
+    Example context (json):
+    {
+        "course": "My ace course",
+        "forum": "My ace forum",
+        "img": "https://randomuser.me/api/portraits/women/71.jpg",
+        "username": "My ace forum",
+        "role": "Teacher",
+        "url": "moodlecourse?id=foo",
+        "title": "My forum post title",
+        "date": "6:30pm 13th Oct",
+    }
 
-    <a href="{{ url }}">{{ title }}</a>
-    <br>
-    <small>{{{date}}}</small>
+}}
+<small>{{course}} / {{forum}}</small>
+<br>
+
+<div class="d-flex">
+    <div class="bg-cover rounded-circle bg-light mr-2 flex-shirk-0" style="width: 3rem;
+    height: 3rem;
+    background-image: url('{{{img}}}');
+    "></div>
+    <div>
+        <small>{{{username}}}</small>
+        <small class="badge badge-dark">{{{ role }}}</small>
+    </div>
 </div>
+<a href="{{ url }}">{{ title }}</a>
+<br>
+<small>{{{date}}}</small>
