--- a/templates/post.mustache
+++ b/templates/post.mustache
@@ -38,4 +38,4 @@
     </div>
 </div>
 <a class="line-clamp-2" href="{{ url }}">{{ title }}</a>
-<div class="small text-muted">{{{date}}}</small>
+<div class="small text-muted">{{{date}}}</div>
