--- a/templates/posts.mustache
+++ b/templates/posts.mustache
@@ -1,6 +1,6 @@
 <div class="row">
 {{#post}}
-    <div class="col-3">
+    <div class="col-3 py-2">
     {{> block_forumfeed/post }}
     </div>
 {{/post}}
