Check if we have a popular post before getting the record

--- a/templates/posts.mustache
+++ b/templates/posts.mustache
@@ -14,8 +14,7 @@
 {{! Link to all forum posts by user. }}
 <div class="text-right">
     <a href="{{{ config.wwwroot }}}/mod/forum/user.php">
-        <i class="fa-solid fa-circle-arrow-right mr-2" aria-hidden="true"></i>
-        {{#str}} viewyourforumposts,  block_forumfeed {{/str}}
+        <i class="fa-solid fa-circle-arrow-right mr-2" aria-hidden="true"></i>{{#str}} viewyourforumposts,  block_forumfeed {{/str}}
     </a>
 </div>
 
