--- a/templates/posts.mustache
+++ b/templates/posts.mustache
@@ -7,12 +7,14 @@
 
 {{! No posts message. }}
 {{^post}}
-    <p>{{#str}} noposts, block_forumfeed {{/str}}</p>
+    <div class="col">
+        <p>{{#str}} noposts, block_forumfeed {{/str}}</p>
+    </div>
 {{/post}}
 </div>
 
 {{! Link to all forum posts by user. }}
-<div class="text-right">
+<div class="text-right mt-3">
     <a href="{{{ config.wwwroot }}}/mod/forum/user.php">
         <i class="fa-solid fa-circle-arrow-right mr-2" aria-hidden="true"></i>{{#str}} viewyourforumposts,  block_forumfeed {{/str}}
     </a>
