--- a/templates/post.mustache
+++ b/templates/post.mustache
@@ -13,6 +13,7 @@
 }}
 {{!
     @template blocks_forumfeed/post
+
     Example context (json):
     {
         "course": "My ace course",
@@ -23,7 +24,8 @@
         "url": "moodlecourse?id=foo",
         "title": "My forum post title",
         "date": "6:30pm - 13th October",
-        "poststhisweek": "3",
+        "popular": true,
+        "poststhisweek": "3"
     }
 
 }}
