--- a/templates/posts.mustache
+++ b/templates/posts.mustache
@@ -11,6 +11,19 @@
     You should have received a copy of the GNU General Public License
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
+{{!
+    @template blocks_forumfeed/posts
+
+    Example context (json):
+    {
+        "popular": false,
+        "post": [
+            {
+                "course": "My ace course"
+            }
+        ]
+    }
+}}
 
 <p>{{#str}} description,  block_forumfeed {{/str}}</p>
 <div class="row">
